--- a/Fitness3 App/app/src/main/res/layout/login_fragment_1.xml
+++ b/Fitness3 App/app/src/main/res/layout/login_fragment_1.xml
@@ -42,4 +42,17 @@
         android:src="@drawable/glow_drawable"
         android:layout_centerHorizontal="true"/>
 
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Connect to Wallet"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/button_design_default_circular"
+        android:textColor="@color/white"
+        android:layout_marginHorizontal="40dp"
+        android:textAllCaps="false"
+        android:layout_alignParentBottom="true"/>
+
 </RelativeLayout>
