--- a/Fitness3 App/app/src/main/res/layout/fragment_audius_music.xml
+++ b/Fitness3 App/app/src/main/res/layout/fragment_audius_music.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,12 +7,19 @@
     tools:context=".home.ui.audiusmusic.AudiusMusicFragment"
     android:background="@color/background_color_default_for_app">
 
+    <ProgressBar
+        android:id="@+id/audius_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp"
-        tools:listitem="@layout/audius_music_card" />
+        tools:listitem="@layout/audius_music_card"
+        android:translationZ="-1dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
